# myserver

./: .gitignore  CMakeLists.txt  README.md  client_comm_engine.cpp  gameserver框架图.xmind
common/: CMakeLists.txt  base.h  client_comm_engine.cpp  client_comm_engine.h  common_def.h  dblogin_type.h  json_reader.h  log_def.h  message_interface.h  platform_def.h  safe_pointer.h  server_comm_engine.cpp  server_comm_engine.h  server_config.cpp  server_config.h  shm_type.h  singleton.h  tcp_def.h
common/db/: db_playerbase.h  db_playercity.h  db_playerdata.h  shm_def.h  shm_manager.cpp  shm_manager.h  shm_pool.h
common/message/: cmake.bat  common.pb.h  dbmessage.pb.cc  dbmessage.pb.h  message.pb.cc  message.pb.h  player.pb.cc  player.pb.h
dbserver/: CMakeLists.txt  main.cpp
dbserver/inc/: basedb.h  database.h  database_mysql.h  databasemysql.h  db_client.h  db_ctrl.h  db_server.h  db_thread.h  dbctrl.h  dbhandle.h  field.h  message_factory.h  messagefactory.h  query_result.h  query_result_mysql.h  queryresult.h  queryresultmysql.h  shm_manager.h
dbserver/src/: database.cpp  database_mysql.cpp  databasemysql.cpp  db_client.cpp  db_ctrl.cpp  db_server.cpp  db_thread.cpp  dbctrl.cpp  dbhandle.cpp  field.cpp  message_factory.cpp  messagefactory.cpp  query_result_mysql.cpp  shm_manager.cpp
framework/: CMakeLists.txt
framework/base/: base.cpp  base.h  base_header.h  commondef.h  dirtyword.cpp  hash_helper.h  json_interface.h  json_reader.h  lock_free_limit_queue.h  lock_free_queue.h  lock_free_ring_queue.h  log.cpp  log.h  main.cpp  message_factory.cpp  message_factory.h  my_assert.h  my_macro.h  object.cpp  object.h  objectManager.cpp  objectManager.h  object_manager.cpp  objectmanager.h  objmanager.h  performance.cpp  performance.h  platform_def.cpp  platform_def.h  rb_tree.h  rbthash_map.h  reflection.h  safe_pointer.h  server_tool.cpp  server_tool.h  servertool.cpp  servertool.h  signal_handler.cpp  signal_handler.h  singleton.h  (+3 more)
framework/config/: config.cpp  config.h  config_data.cpp  config_data.h  json.cpp  luaconfig.cpp  protoconfig.cpp  protoconfig.h
framework/const/: common_def.h  commondef.h  platform_def.cpp  platform_def.h
framework/db/: basedb.h  database.cpp  database.h  database_mysql.cpp  database_mysql.h  db_thread.cpp  db_thread.h  query_result.h  query_result_mysql.h
framework/event/: event.h  eventHandler.h  eventbus.cpp  eventbus.h  handlerregistration.h
framework/json/: config.cpp  config.h  json.cpp  json.h  json_interface.cpp  json_interface.h
framework/log/: log.cpp  log.h
framework/lua/: lua_bridge.h  lua_file.h
framework/mem/: array_list.h  code_queue.cpp  code_queue.h  codequeue.cpp  codequeue.h  hash_function.h  list.h  map.h  mem_pool.h  mempool.h  mempool_safty.h  mempoolsafty.h  set.h  share_container_interface.h  share_mem.cpp  share_mem.h  sharemem.cpp  sharemem.h  shm.cpp  shm.h  shm_api.cpp  shm_api.h  shm_manager.cpp  shm_manager.h  shm_pool.h  shm_queue.cpp  shm_queue.h  skip_list.h  unordered_map.h  vector.h
framework/message/: alliance.pb.cc  alliance.pb.h  building.pb.cc  building.pb.h  chat.pb.cc  chat.pb.h  client_comm_engine.cpp  client_comm_engine.h  common.pb.cc  common.pb.h  dbmessage.pb.cc  dbmessage.pb.h  equipment.pb.cc  equipment.pb.h  friend.pb.cc  friend.pb.h  hospital.pb.cc  hospital.pb.h  item.pb.cc  item.pb.h  make.bat  make.sh  map.pb.cc  map.pb.h  march.pb.cc  march.pb.h  market.pb.cc  market.pb.h  message.pb.cc  message.pb.h  message_interface.h  player.pb.cc  player.pb.h  pray.pb.cc  pray.pb.h  proxymessage.pb.cc  proxymessage.pb.h  rank.pb.cc  rank.pb.h  report.pb.cc  (+22 more)
framework/mystd/: code_queue.h  hash_function.h  my_assert.h
framework/net/: Socket.cpp  Socket.h  acceptor.cpp  acceptor.h  acceptorex.cpp  acceptorex.h  buffev_interface.cpp  buffev_interface.h  byte_buff.cpp  byte_buff.h  ccrypto.cpp  ccrypto.h  client_comm_engine.cpp  client_comm_engine.h  connector.cpp  connector.h  connectorex.cpp  connectorex.h  dispatcher.h  event.cpp  event.h  event_reactor.cpp  event_reactor.h  file_listener.cpp  file_listener.h  listener.cpp  listener.h  message_interface.cpp  message_interface.h  net_Inc.h  net_addr.h  net_inc.h  net_work.cpp  net_work.h  nethead.cpp  nethead.h  network_interface.h  ppe_signal.cpp  ppe_signal.h  runflag.h  (+21 more)
framework/proto/: message.pb.cc  message.pb.h
framework/redis/: redis_client.cpp  redis_client.h
framework/sharemem/: code_queue.cpp  codequeue.cpp  codequeue.h  sharemem.cpp  sharemem.h  shm.cpp  shm.h
framework/shm/: shm.cpp  shm_api.cpp  shm_api.h  shm_pool.h  shm_queue.cpp  shm_queue.h
framework/std/: c_string.h  hash_function.h  hash_helper.h  lock_free_limit_queue.h  my_new.cpp  my_new.h  rbthash_map.h  safe_pointer.h  t_array.h
framework/thread/: my_lock.h  my_thread.cpp  my_thread.h  mythread.cpp  mythread.h  spin_lock.h  task.cpp  task.h  task_helper.h  task_scheduler.cpp  task_scheduler.h  thread.cpp  thread.h  thread_pool.cpp  thread_pool.h  thread_scheduler.cpp  thread_scheduler.h  thread_task.cpp  thread_task.h  threadpool.cpp  threadpool.h
framework/timer/: clock.h  timer.cpp  timer.h
gameserver/: CMakeLists..txt  CMakeLists.txt  main.cpp
gameserver/gamemodule/: CMakeLists.txt
gameserver/inc/: client_handle.h  clienthandle.h  config_handle.h  game_ctrl.h  game_player.h  game_server.h  gameserver.h  message_dispatcher.h  message_factory.h  messagedispatcher.h  messagefactory.h  mfactory_manager.h  player.h  sceneobjmanager.h  server_client.h  server_handle.h
gameserver/src/: client_handle.cpp  clienthandle.cpp  config_handle.cpp  game_ctrl.cpp  game_player.cpp  game_server.cpp  gameserver.cpp  message_dispatcher.cpp  message_factory.cpp  messagedispatcher.cpp  messagefactory.cpp  mfactory_manager.cpp  player.cpp  (+3 more)
gateserver/: CMakeLists.txt  main.cpp
lua-5.3.6/: CMakeLists.txt
proxyserver/: CMakeLists.txt  main.cpp
tcpserver/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  atomic_test.h  lock_free_limit_queue_test.h  main.cpp  rbt_hash_map_test.h  redi_lock.h  scheduler_test.h  test.h
testso/: CMakeLists.txt  test.c
(+427 files in other folders)
